fixed quiz btns alig direction for when one btn is visible

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -164,11 +164,10 @@ label.radioLabel{
   justify-content: space-around;
   padding: 15px;
 }
-.action-btns{
+.quiz-action-btns{
   display:flex;
   justify-content: space-between;
   margin: 15px;
-
 }
 .question-content{
   padding: 1.25rem;
